# cortex

./: .gitignore  DESIGN.md  MAP.md  README.md  config.example.toml  pyproject.toml
cortex/: bulletin.py  collect_tick.py  config.py  ctl.py  day_log.py  db.py  feedback.py  install.py  kick.py  lie_down.py  note.py  note_render.py  pacemaker_tick.py  say.py  sentinel.py  symlinks.py  timing.py  transcript.py  wait.py  wake.py  wake_state.py  watchdog.py  window.py
cortex/collectors/: __init__.py  activity.py  geofence.py  health.py  (+1 more)
deploy/: boot_rules.example.md  ct-collect-tick.plist  ct-pacemaker-tick.plist
docs/: day_log.sample.md
templates/: CLAUDE.md  handoff_template.md  notebook.md  playbook.md  wishlist.md
tests/: conftest.py  test_activity.py  test_adopt_window.py  test_bulletin.py  test_collect_tick.py  test_collectors_run_all.py  test_config.py  test_day_log.py  test_db.py  test_feedback.py  test_gen_epoch.py  test_geofence.py  test_global_silence_source.py  test_hard_interrupt.py  test_health.py  test_integration.py  test_isolation_barrier.py  test_kick.py  test_knowledgec.py  test_lie_down_ear_kill.py  test_night_presence_gate.py  test_night_self_check.py  test_no_notifications.py  test_note.py  test_pacemaker_core.py  test_pacemaker_desire.py  test_pacemaker_expect_reply.py  test_pacemaker_gates.py  test_pacemaker_schedule.py  test_pacemaker_triggers.py  test_reconcile.py  test_say.py  test_sentinel.py  test_silence_source.py  test_silence_tiers.py  test_singleton.py  test_state_dir_guard.py  test_symlinks.py  test_wait.py  test_wake.py  (+4 more)
(+11 files in other folders)
